--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@openzeppelin/cli",
-  "version": "2.5.3",
+  "name": "@authereum/openzeppelin-sdk",
+  "version": "2.5.3-beta.0",
   "description": "Command-line interface for the OpenZeppelin smart contract platform",
   "main": "./lib/index.js",
   "private": false,
@@ -13,7 +13,8 @@
     "gen-docs": "./scripts/gen-docs.sh",
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
-    "precommit": "tsc --noEmit && lint-staged"
+    "precommit": "tsc --noEmit && lint-staged",
+    "publish-module": "npm publish --tag beta --access public"
   },
   "lint-staged": {
     "gitDir": "../../",
